# fpy3

./: .dockerignore  .gitignore  .gitmodules  BROWSER_CHECK.md  Dockerfile  Makefile.vendor  README.md  README.ru.md  cert.pem  docker-compose.yml  hello_world.py  key.pem  meson.build  pyproject.toml  run_verification.py  setup_dependencies.sh  test_asgi.py  test_http3_client.py  test_server.py  verify.sh  verify_server.sh
docs/: info_run.md
examples/: check_http3.sh  http3_test_server.py  readme.md
examples/docker_https/: README.md  docker-compose.yml
examples/docker_letsencrypt/: Caddyfile  Dockerfile.caddy  README.md  docker-compose.yml
examples/docker_traefik_nip/: README.md  cert.pem  docker-compose.yml  key.pem  traefik_dynamic.yml
reserch/docs/: improvements_and_http3.md  project_analysis.md  run.md  чеклист.md
reserch/promt/: llm_base.ru.md
reserch/todo/: todo.md
scripts/: build_deps.sh
src/fpy/: __main__.py  asgi.py  reloader.py  runner.py
src/fpy/app/: __init__.py
src/fpy/parser/: cparser_ext.py
src/fpy/parser/c_impl/: cparser.c
src/fpy/pipeline/: __init__.py  cpipeline_ext.py  test_pipeline.py
src/fpy/pipeline/c_impl/: cpipeline.c
src/fpy/protocol/: cprotocol.pyi  cprotocol_ext.py  creaper_ext.py  handler.py
src/fpy/protocol/c_impl/: cprotocol.c  cquic.c  creaper.c
src/fpy/request/: __init__.py  crequest_ext.py
src/fpy/request/c_impl/: crequest.c
src/fpy/response/: cresponse_ext.py
src/fpy/response/c_impl/: cresponse.c
src/fpy/router/: cmatcher_ext.py
src/fpy/router/c_impl/: cmatcher.c  match_dict.h
src/fpy3/: __main__.py  asgi.py  reloader.py  runner.py
src/fpy3/app/: __init__.py
src/fpy3/parser/: cparser_ext.py
src/fpy3/picohttpparser/: picohttpparser.c
src/fpy3/pipeline/: cpipeline_ext.py  test_pipeline.py
src/fpy3/protocol/: cprotocol_ext.py  creaper_ext.py  handler.py
src/fpy3/protocol/c_impl/: cprotocol.c  cquic.c  creaper.c
src/fpy3/request/: __init__.py  crequest.pyi  crequest_ext.py
src/fpy3/request/c_impl/: crequest.c
src/fpy3/response/: cresponse.pyi  cresponse_ext.py
src/fpy3/response/c_impl/: cresponse.c
src/fpy3/router/: cmatcher.pyi  cmatcher_ext.py  test_matcher.py
src/fpy3/router/c_impl/: cmatcher.c
